# sovran

./: .env  .gitignore  CLAUDE.md  Makefile  README.md  SETUP_INSIDERS.md  TESTING_GUIDE.md  code-insiders  combined_git_changes.txt  ntc.md  package-lock.json  package.json  pyproject.toml  repo_dump.txt
.aegis/: .gitignore  config.yaml
.github/workflows/: ci.yml  cloud-e2e.yml  e2e-real.yml  release-extension.yml  test-dispatch.yml
aegis-vscode-remote/extension/: .env.real-e2e.example  .gitignore  .vscodeignore  README.md  aegis-remote-0.0.1.vsix  aegis_extension_codebundle.txt  jest.config.js  package-lock.json  package.json  tsconfig.e2e.json  tsconfig.json
aegis-vscode-remote/launcher/: README.md  aegis-secure-launch-linux.sh  aegis-secure-launch.sh
aegis-vscode-remote/proxy/: cert.crt  cert.key  package-lock.json  package.json  tsconfig.json
aegis-vscode-remote/workspace-mock/: Dockerfile  README.md  start-reh.sh
aegis_swarm_adapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/claude/: run_fedramp_swarm.py
agents/swarm/: coordinator.py  failure_heuristics.py
cloud-terraform/charts/: CLOUD_DEPLOYMENT_CHECKLIST.md  CLUSTER_CONFIGURATION.md  PROXY_INTEGRATION.md  TLS_TESTING_GUIDE.md
cloud-terraform/terraform/: .gitignore  DEPLOYMENT-MODES.md  DEPLOYMENT.md  DESTROY_CHECKLIST.md  Makefile  QUICKREF.md  README.md  addons.tf  backend.hcl  backend.hcl.example  combined_terraform.txt  ecr.tf  (+10 more)
docs/: GETTING_STARTED.md  compliance-roadmap.md  infrastructure-reference.md  secure-mode.md  vscode-extension.md
servers/: mcp_compat.py
(+132 files in other folders)
