[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-swarm-adapter"
version = "0.1.0"
description = "Local agent swarm adapter for the Aegis VS Code repo"
requires-python = ">=3.10"
dependencies = [
  "claude-agent-sdk==0.1.2",
  "mcp>=1.23.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "gitpython>=3.1.40",
  "httpx>=0.27.0",
  "openai>=1.30.0",
  "urllib3>=2.6.3",
  "starlette>=0.49.1",
  "python-multipart>=0.0.22",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents", "servers", "agents.*", "servers.*"]
